Bug 148085 - About dialog hyperlinks look bad (invisible / have no contrast) in dark mode on Windows
Summary: About dialog hyperlinks look bad (invisible / have no contrast) in dark mode ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.4.6 target:7.5.1
Keywords:
: 149335 152525 (view as bug list)
Depends on:
Blocks: UI-Theming About-Dialog Windows-Dark-Mode 118320
  Show dependency treegraph
 
Reported: 2022-03-19 16:36 UTC by Mike Kaganski
Modified: 2023-02-08 15:20 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
About dialog in Dark Mode (114.71 KB, image/png)
2022-03-19 16:36 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2022-03-19 16:36:33 UTC
Created attachment 178970 [details]
About dialog in Dark Mode

The attachment shows that the links in About dialog are very dark. For comparison, one could look how hyperlinks look in browsers on pages that honor dark mode (e.g., https://docs.microsoft.com/en-us/office/vba/language/reference/user-interface-help/dictionary-object in Chrome on Windows shows the links in much lighter blue on the dark background, which is clearly visible).
Comment 1 Roman Kuznetsov 2022-04-07 17:47:41 UTC
Heiko, possible it can be changed just in LO's Options dialog inside you Dark mode color set?

Set to New
Comment 2 Heiko Tietze 2022-04-08 07:21:02 UTC Comment hidden (obsolete)
Comment 3 Heiko Tietze 2022-04-08 07:21:44 UTC Comment hidden (obsolete)
Comment 4 V Stuart Foote 2022-04-14 12:59:39 UTC
Colors set for 'Unvisited links' and 'Visited links' in the "Application Colors" panel with the LibreOffice Dark theme are applied to document canvas, and will toggle for example taking Writer between Normal and Web view modes.

But the hyperlinks in the UI panels like the Help -> About dialog do not respond, though they are valid URI that can be followed. They seem to have a different mechanism for assigning their color--which comes from elsewhere (os/DE likely).
Comment 5 Rafael Lima 2022-05-27 19:55:41 UTC
*** Bug 149335 has been marked as a duplicate of this bug. ***
Comment 6 Stéphane Guillou (stragu) 2022-12-15 18:36:12 UTC
*** Bug 152525 has been marked as a duplicate of this bug. ***
Comment 7 Rafael Lima 2022-12-15 22:31:02 UTC
I'm not an expert in how Windows manages its colors, but my take is that the hyperlink color in Windows is only defined for high-contrast mode. See the following code:

https://opengrok.libreoffice.org/xref/core/vcl/win/window/salframe.cxx?r=34e017c4#2728

Aside from that, the color used is COL_BLUE. See:

https://opengrok.libreoffice.org/xref/core/vcl/source/app/settings.cxx?r=e0066326#724

So I think that the hyperlink color in Windows does not get reassigned.
Comment 8 Caolán McNamara 2023-02-01 15:22:50 UTC
GetSysColor(COLOR_HOTLIGHT) (like all the GetSysColor calls) return the Light Mode (except for high contrast) colors. Experimenting, I find that:
GetThemeColor(hTheme, TEXT_HYPERLINKTEXT, TS_HYPERLINK_NORMAL, TMT_TEXTCOLOR, &color)
gives me something decent in dark mode that is usable. Though I don't see a visited equivalent, but that doesn't matter for this case I guess.
Comment 9 Commit Notification 2023-02-01 19:28:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9274d41bd72c5310491d81c6d8d938e44ed9d223

tdf#148085 get a more readable hyperlink color under windows dark mode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2023-02-01 19:33:04 UTC
Seems an improvement to me, and looks like the color visual studio uses for its hyperlink in dark mode. Backports to 7-5 and 7-4 in gerrit.
Comment 11 Commit Notification 2023-02-01 20:04:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/49701230a9a5e87475237a0392155c4c679a1cb0

tdf#148085 get a more readable hyperlink color under windows dark mode

It will be available in 7.4.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-02-01 20:07:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/fbb3b4db190f044fc99048116087a891e7d9f25f

tdf#148085 get a more readable hyperlink color under windows dark mode

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 lol 2023-02-08 15:20:18 UTC
Verified. Checked with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9259f79517bec3e7ebbc423eca098694fbf2a079
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

The links are now much better to read.

Thanks for fixing this!