tdf#148085 get a more readable hyperlink color under windows dark mode

Change-Id: I392206eb9fcff7fca39c6efee747486f4dfa925e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146459
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>