vcl/win/window/salframe.cxx
@@ -2700,6 +2700,13 @@ void WinSalFrame::UpdateSettings( AllSettings& rSettings )
         aMenuBarRolloverTextColor = ImplWinColorToSal( color );
         CloseThemeData(hTheme);
 
+        if (hTheme = OpenThemeData(mhWnd, L"Textstyle"))
+        {
+            GetThemeColor(hTheme, TEXT_HYPERLINKTEXT, TS_HYPERLINK_NORMAL, TMT_TEXTCOLOR, &color);
+            aStyleSettings.SetLinkColor(ImplWinColorToSal(color));
+            CloseThemeData(hTheme);
+        }
+
         // tdf#148448 pick a warning color more likely to be readable as a
         // background in a dark theme
         aStyleSettings.SetWarningColor(Color(0xf5, 0x79, 0x00));
